--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -29,4 +29,11 @@
 	<li><strong>I'll tell you how</strong> I became the prince of a town called Bel-Air</li>
 </ol>
 
+<p>In the end, the energy from the 43,150 fans — the fourth-largest home crowd for an Orioles game this season — was enough to prod Baltimore to a 5-2 victory against the Boston Red Sox in the penultimate game of the year.</p>
+
+<sergey-import src="video" />
+
+<p>Now, he’ll take the ball in Game 1 of the American League Division Series on <a href="#">Saturday</a> when the Orioles face the Texas Rangers in a 1 p.m. game at Camden Yards.</p>
+
+
 </div>
