--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li class="mb-1"><a href="article-body.html">↳ Unordered List</a></li>
                 <li class="mb-1"><a href="article-body.html">↳ Ordered List</a></li>
                 <li class="mb-1"><a href="article-body.html">↳ Media Item</a></li>
+                <li class="mb-1"><a href="article-body.html">↳ Video</a></li>
               </ul>
             </li>
         </ul>
@@ -180,6 +181,13 @@
               <li class="mb-1"><a href="pullquote-culture-color-strip.html">↳ Culture Color Strip</a></li>
               <li class="mb-1"><a href="pullquote-sports.html">↳ Sports</a></li>
               <li class="mb-1"><a href="pullquote-sports-black.html">↳ Sports Black</a></li>
+            </ul>
+          </li>
+
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="video.html">Video</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            <ul class="submenu hidden">
             </ul>
           </li>
 
