nav, toppers, tailwind, logos, dark

--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -6,7 +6,7 @@
 <sergey-import src="lead-art-feature" />
 </div>
 
-<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black">
+<div class="order-1 lg:col-span-2 lg:flex lg:flex-col lg:items-center lg:h-screen-bars lg:place-content-center bg-black py-6">
 
 <sergey-import src="article-topper-context-related" />
 
@@ -17,6 +17,10 @@
 
 <sergey-import src="attribution-date" />
 
+</div>
+
+<div class="block lg:hidden">
+<figcaption class="my-8 font-light text-gray leading-none text-sm block px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
 </div>
 
 </div>
