--- a/_imports/lead-art-feature.html
+++ b/_imports/lead-art-feature.html
@@ -1,4 +1,4 @@
-<figure class="block-lead-art block-lead-art-full max-w-full lg:h-full">
-	<img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/SFLXSMSI75F45GJBZ7ULNQDC5U.jpg" class="lg:object-cover lg:object-left lg:h-full">
-	<figcaption class="font-light text-gray leading-none text-sm block mt-2 px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
+<figure class="block-lead-art block-lead-art-full h-half-screen lg:h-full">
+	<img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/SFLXSMSI75F45GJBZ7ULNQDC5U.jpg" class="object-cover object-left h-full">
+	<figcaption class="hidden lg:block font-light text-gray leading-none text-sm block mt-2 px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
 </figure>
