--- a/_imports/video.html
+++ b/_imports/video.html
@@ -1,7 +1,7 @@
-<div class="block-video relative bg-black aspect-video">
+<div class="block-video relative aspect-video">
     
     <!-- Video cover image -->
-    <img src="assets/images/football-loop.gif" alt="Video Cover" class="absolute top-0 left-0 w-full h-full object-cover">
+    <img src="assets/images/football-loop.gif" alt="Video Cover" class="absolute bg-black top-0 left-0 w-full h-full object-cover">
 
     <!-- Play button -->
     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
@@ -18,7 +18,7 @@
 
     <!-- Duration -->
 
-    <div class="absolute bottom-2 left-2 font-mono">
+    <div class="absolute bottom-2 left-2 font-mono text-white shadow-2xl">
         1:24
     </div>
 
