ad zones, article content, charm, nav

--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -19,7 +19,15 @@
 
 <p>All season, Kyle Bradish proved he was the Orioles’ most <a href="#">consistent and valuable starter.</a></p>
 
-<sergey-import src="ad-zone" />
+<!-- show a square ad on mobile and a wide ad on desktop -->
+<div class="ad-zone !max-w-full !px-02">
+	<div class="block lg:hidden">
+		<sergey-import src="ad-zone-300-250" />
+	</div>
+	<div class="hidden lg:block">
+		<sergey-import src="ad-zone-970-250" />
+	</div>
+</div>
 
 <p>Now, he’ll take the ball in Game 1 of the American League Division Series on <a href="#">Saturday</a> when the Orioles face the Texas Rangers in a 1 p.m. game at Camden Yards.</p>
 
