--- a/_imports/layout-article-feature.html
+++ b/_imports/layout-article-feature.html
@@ -2,17 +2,80 @@
 
 <div class="article-body">
 
-<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+<p>As a team, the Orioles have defied expectation and struck wonder in the hearts of fans this season. The grub at Camden Yards, not so much.</p>
 
-<p>They rooted on relish in the condiment race. They praised <a href="#" class="text-purple-700 underline  underline-offset-2 bg-purple-100">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+<p>Here’s a sprinkling of reader complaints from my inbox. “The food at Camden Yards has noticeably deteriorated from years past,” wrote one. “I was just blown away about how bad” it was, said another. According to one fan, “The only thing worse than the fare this season is the disorganization, waiting lines and lack of inventory.”</p>
 
-<p>In the end, the energy from the 43,150 fans — the fourth-largest home crowd for an Orioles game this season — was enough to prod Baltimore to a 5-2 victory against the Boston Red Sox in the penultimate game of the year.</p>
+<!-- show a square ad on mobile and a wide ad on desktop -->
+<div class="ad-zone !max-w-full !px-0">
+	<div class="block lg:hidden">
+		<sergey-import src="ad-zone-300-250" />
+	</div>
+	<div class="hidden lg:block">
+		<sergey-import src="ad-zone-970-250" />
+	</div>
+</div>
 
-<sergey-import src="paywall-inline" />
+<p>Gripes include poorly cooked and badly seasoned items, stands running out of items, meager beer selection and, of course, those prices. Fans likely choked on their $15 ales reading that recent interview with team owner <a href="#">John Angelos</a> in which the Ebenezer Scrooge of baseball told The New York Times that the O’s will “have to raise the prices here — dramatically” to keep its young star players. Just how much higher can those prices get? I’m afraid to ask.</p>
+
+<p>When I tried a few items <a href="#">back in April</a>, I wasn’t impressed with the soggy potato wedges, crappy tortilla chips or missing-in-action Yard Dogs. But Levy Restaurants, which is in its first year overseeing the ballpark food, assured me that things would get better. Last week, I decided to go back to the ballpark for Round 2.</p>
+
+<p>Sure enough, as the O’s prepared to take on the Toronto Blue Jays, I noticed a few improvements in the food department — and at last, the smell of real, live smoke emanating from Boog’s Barbecue. But was it enough to salvage the dining experience at Camden Yards? Or are readers better off bringing their own eats?</p>
+
+<p>[single recirc]</p>
+
+<p>[tweet embed]</p>
+
+<h2>The Good</h2>
+
+<h3>The Bmore Chicken Box</h3>
+
+<sergey-import src="media-item">
+	<sergey-template name="url">https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/MAZIIHSNWBFPZNG2NY4O2ZPNNQ.jpg</sergey-template>
+	<sergey-template name="caption">It might not look appetizing, but the Bmore Chicken Box at Bleacher Grill was the most-improved item we tried during a recent visit to Camden Yards. (Christina Tkacik)</sergey-template>
+</sergey-import>
+
+<p>The award for most-improved item goes to the Bmore chicken box, served at Bleacher Grill. Last time I visited, the fries it came with were so soggy they were inedible, and burnt, wet, pieces of skin slipped off the chicken. This time, the fries were replaced by crispy, well-seasoned potato wedges and the juicy chicken tenders were actually crispy on the outside. Another key innovation: The box was served open rather than closed, which prevented the steam bath situation that had contributed to the damp conditions during my earlier visit. Yes, the chicken itself was bland. But I was grateful for the generous portion size — three sizable tenders that could be comfortably shared for dinner. For $15.99, that’s one of the better deals at the Yard.</p>
 
 <sergey-import src="link-box" />
 
+<h3>The Rotating Pop-up</h3>
+
+<p>During my visit, I was happy to see <a href="#">The Urban Oyster</a> representing Baltimore food at the local pop-up space where the old Charm City Diner used to be. It is just one in a rotating cast of local restaurants that have included the likes of <a href="#">Sally O’s</a> and <a href="#">Fuzzies Burgers</a>. It wasn’t long ago that places like <a href="#">Attman’s Deli</a> and Pinch Dumplings had regular stands at the ballpark, and I hope that the pop-up is a harbinger of more area favorites — and superior food options — to come. (For what it’s worth, the offerings at Jimmy’s Famous Seafood, which has a permanent presence at the park, drew praise from several readers.)</p>
+
+<h2>The Fine</h2>
+
+<h3>Pizza</h3>
+
+<sergey-import src="media-item">
+	<sergey-template name="url">https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/ZUM6BZC2TRE33KMTHFEIUEB55Q.jpg</sergey-template>
+	<sergey-template name="caption">I included an iPhone in this photo of the margherita pizza from Oro Brick Oven Pizza to demonstrate how absurdly small it is. (Christina Tkacik)</sergey-template>
+</sergey-import>
+
+<p>Ludicrously small for the price (a mere 10 or 11 inches for $19), the Neapolitan-style pizza from Oro Pizza, just next to Bleacher Grill, at least came with an acceptable crust and genuine basil leaves. It won the approval of my dining companions and Baltimore Banner colleagues Justin Fenton and Paul Mancano, while I tried to ignore the congealed cheese — a result of the pizza sitting out just longer than desirable.</p>
+
+<h3>Crab Pretzel Bowl</h3>
+
+<sergey-import src="media-item">
+	<sergey-template name="url">https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/JGXAHCYNZRD53FQZWYNWE2IATA.jpg</sergey-template>
+	<sergey-template name="caption">At first it was the crab dip boule. Then it was the crab pretzel bowl. Yet there's nothing pretzel about this dish, which, like so many items at Camden Yards, comes with a layer of congealed cheese on top. (Christina Tkacik)</sergey-template>
+</sergey-import>
+
+<p>The powers that be at Levy have done away with the <a href="#">“crab dip boule”</a> affectation they introduced at a media preview earlier this year, renaming the dish a crab pretzel bowl. Even still, the name doesn’t fit: there’s nothing “pretzel” about the square-shaped bread dish served at the SuperBook Sports lounge and inside the self-service B&O Market, where I picked one up. While I wasn’t repelled by the overall experience — the crab dip is well-seasoned and the bread soft and chewy — I’m not rushing to go back for seconds, either. It was overpriced at $17 with a meager portion of dip overwhelmed by bread, no visible flakes of actual crab meat and, you guessed it, a layer of congealed cheese on top.</p>
+
+<p>[sign up for alerts]</p>
+
+<p>In the few cases where I tried to purchase something not using a touchscreen, things got awkward. I’ve visited the ballpark twice this year, and each time a worker insisted I pay them in cash.</p>
+
+<p>Based on messages I received from readers, my experience wasn’t a one-off. During a game this past June, one Banner reader said, “We waited for 30 minutes for my son’s chicken tenders and fries. While waiting one of the employees said it might be quicker if I just paid cash.” Was the worker planning to keep the money? Our friend never found out; he didn’t have any cash anyway. In the end, his fries were soggy and the chicken was cold.</p>
+
 <sergey-import src="author-block" />
+
+<sergey-import src="card-list" />
+
+<sergey-import src="link-box" />
+
+
 
 </div>
 
