--- a/article-body.html
+++ b/article-body.html
@@ -1,5 +1,7 @@
 <sergey-import src="template">
 
     <sergey-import src="article-body" />
-  
+    <sergey-template name="selector">.article-body</sergey-template>
+    
+
 </sergey-import>
