--- a/_imports/article-topper-context-related.html
+++ b/_imports/article-topper-context-related.html
@@ -3,7 +3,7 @@
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
 	<a class="section-front font-caslon px-4 pr-2 text-lg">
-		Culture
+		Food & Drink
 	</a>
 	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-normal text-sm mr-2">Related</a>
 	<a href="#" class="section mr-2 hover:text-purple">Which area grocery store has the best prices <span class="text-purple ot-ss03 text-sm font-medium ml-0.5">↗</span></a>
