--- a/_imports/charm.html
+++ b/_imports/charm.html
@@ -3,12 +3,12 @@
     <div class="charm-item relative pl-4 bg-black lg:bg-white lg:text-black hidden" id="date">Wed, Sep 27</div>
 
     <div class="charm-item relative pl-4 bg-black lg:bg-white lg:text-black" id="subscribe">
-        <div class="hidden lg:block"><a href="#" class=""><span class="absolute -translate-x-full pr-2 material-symbols-sharp mr-2 opacity-50 text-sm">sports_baseball</span> Game @ 7pm</a></div>
+        <div class="hidden lg:block"><a href="#" class=""><span class="absolute -translate-x-full pr-2 material-symbols-sharp mr-2 opacity-50 text-sm pt-1">sports_baseball</span> Game @ 7pm</a></div>
         <div class="block lg:hidden"><a href="#" class="underline decoration-1 underline-offset-2 decoration-orange">Get the App</a></div>
     </div>
 
     <div class="charm-item relative pl-4 bg-black lg:bg-white lg:text-black" id="time">
-        <a href="#" class="inline-block leading-none"><span class="absolute -translate-x-full pr-2 material-symbols-sharp mr-2 opacity-50 text-sm">sports_football</span> Bal 29 &nbsp; Tex 9</a>
+        <a href="#" class="inline-block leading-none"><span class="absolute -translate-x-full pr-2 material-symbols-sharp mr-2 opacity-50 text-sm">sports_football</span> Bal 29 &nbsp;Tex 9</a>
     </div>
 
     <div class="charm-item relative pl-4 bg-black lg:bg-white lg:text-black" id="weather">
