article no image, author block, video

--- a/_imports/article-lead.html
+++ b/_imports/article-lead.html
@@ -2,6 +2,6 @@
 
 <sergey-import src="divider" />
 
-<p class="px-4 font-bold text-3xl font-condensed leading-none mb-6">Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</p>
+<p class="px-4 font-bold text-3xl font-condensed leading-none mb-6"><sergey-slot>Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</sergey-slot></p>
 
 </div>
