--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -28,6 +28,7 @@
 
     <h3 class="uppercase font-condensed mb-4">More from Kyle Goon</h3>
 
+    <div class="lg:flex">
     <div class="article mb-4">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
     <time class="leading-tight font-light text-sm text-gray">Sep 1, 2023</time>
@@ -36,6 +37,7 @@
     <div class="article mb-4">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
     <time class="leading-tight font-light text-sm text-gray">Sep 1, 2023</time>
+    </div>
     </div>
     
   </div>
