--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <a class="block mb-2 font-bold" href="layout-article-feature-black.html">Article Feature Black</a>
             <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
           </li>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="layout-article-no-lead-art.html">Article No Lead Art</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          </li>
         </ul>
 
       </section>
@@ -102,6 +106,7 @@
                 <li class="mb-1"><a href="article-topper-none-left.html">↳ No Art, Left</a></li>
                 <li class="mb-1"><a href="article-topper-feature.html">↳ Feature</a></li>
                 <li class="mb-1"><a href="article-topper-feature-black.html">↳ Feature, Black</a></li>
+                <li class="mb-1"><a href="article-topper-no-lead-art.html">↳ No Lead Art</a></li>
               </ul>
             </li>
 
