--- a/_imports/layout-article-feature-black.html
+++ b/_imports/layout-article-feature-black.html
@@ -2,11 +2,19 @@
 
 <div class="article-body">
 
-<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+<p>Here’s a sprinkling of reader complaints from my inbox. “The food at Camden Yards has noticeably deteriorated from years past,” wrote one. “I was just blown away about how bad” it was, said another. According to one fan, “The only thing worse than the fare this season is the disorganization, waiting lines and lack of inventory.”</p>
 
-<p>They rooted on relish in the condiment race. They praised <a href="#" class="text-purple-700 underline  underline-offset-2 bg-purple-100">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+<!-- show a square ad on mobile and a wide ad on desktop -->
+<div class="ad-zone !max-w-full !px-0">
+	<div class="block lg:hidden">
+		<sergey-import src="ad-zone-300-250" />
+	</div>
+	<div class="hidden lg:block">
+		<sergey-import src="ad-zone-970-250" />
+	</div>
+</div>
 
-<p>In the end, the energy from the 43,150 fans — the fourth-largest home crowd for an Orioles game this season — was enough to prod Baltimore to a 5-2 victory against the Boston Red Sox in the penultimate game of the year.</p>
+<p>Gripes include poorly cooked and badly seasoned items, stands running out of items, meager beer selection and, of course, those prices. Fans likely choked on their $15 ales reading that recent interview with team owner <a href="#">John Angelos</a> in which the Ebenezer Scrooge of baseball told The New York Times that the O’s will “have to raise the prices here — dramatically” to keep its young star players. Just how much higher can those prices get? I’m afraid to ask.</p>
 
 <sergey-import src="paywall-inline" />
 
