--- a/_imports/layout-article.html
+++ b/_imports/layout-article.html
@@ -6,6 +6,8 @@
 
 <p>They rooted on relish in the condiment race. They praised <a href="#" class="text-purple-700 underline  underline-offset-2 bg-purple-100">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
 
+<sergey-import src="philanthropy-inline-callout" />
+
 <p>In the end, the energy from the 43,150 fans — the fourth-largest home crowd for an Orioles game this season — was enough to prod Baltimore to a 5-2 victory against the Boston Red Sox in the penultimate game of the year.</p>
 
 <sergey-import src="paywall-inline" />
