--- a/index.html
+++ b/index.html
@@ -246,6 +246,28 @@
 
       </section>
 
+      <section class="mb-12">
+
+        <div class="flex items-center justify-between border-b border-black pb-2 mb-4 ">
+        <h2 class="uppercase text-sm font-condensed">Philanthropy</h2>
+        <div class="total pr-3 text-light-gray"></div>
+        </div>
+
+        <ul>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold" href="philanthropy-inline-callout.html">Inline Callout</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+              </div>
+              <ul class="submenu hidden">
+              </ul>
+            </li>
+
+        </ul>
+
+      </section>
+
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
