--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -25,6 +25,6 @@
 
 </div>
 
-<sergey-import src="article-lead">As a team, the Orioles have defied expectation and struck wonder in the hearts of fans this season. The grub at Camden Yards, not so much.</sergey-import>
+<sergey-import src="article-subheadline">As a team, the Orioles have defied expectation and struck wonder in the hearts of fans this season. The grub at Camden Yards, not so much.</sergey-import>
 
 </div>
