--- a/_imports/article-topper-no-lead-art.html
+++ b/_imports/article-topper-no-lead-art.html
@@ -1,13 +1,14 @@
-<div class="block-article-topper">
+<div class="block-article-topper md:text-center">
 
 <sergey-import src="article-topper-context-live" />
 
 <sergey-import src="article-topper-headline">
-    <strong class="font-black">Escaped murderer Danelo Cavalcante has been arrested after 2 weeks on the run in Pennsylvania</strong>
+	Escaped murderer Danelo Cavalcante has been arrested after 2 weeks on the run in Pennsylvania
 </sergey-import>
+
 
 <sergey-import src="attribution-date" />
 
-<sergey-import src="article-lead" />
+<sergey-import src="article-subheadline" />
 
 </div>
