--- a/_imports/collage-2-up-vertical.html
+++ b/_imports/collage-2-up-vertical.html
@@ -1,7 +1,7 @@
 <!-- two-up, landscape ratio -->
 <div class="block-collage block-collage-2-up block-collage-2-up-landscape bg-orange flex flex-col-3 p-6 gap-8 mb-12">
-  <div class="image w-1/2 aspect-square bg-light-green -rotate-1">
+  <div class="image w-1/2 aspect-[3/4] bg-light-green -rotate-1">
     <img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/FO3BLFQ7GJA4NB3OLTUITLAPJU.JPG" class="w-full h-full object-cover"></div>
-  <div class="image w-1/2 aspect-square bg-light-green rotate-1">
+  <div class="image w-1/2 aspect-[3/4] bg-light-green rotate-1">
     <img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/HDLUZRH23NHCDG5G4UU5BTCC5Q.JPG" class="w-full h-full object-cover"></div>
 </div>
