--- a/ad-zone-728-90.html
+++ b/ad-zone-728-90.html
@@ -1,6 +1,12 @@
 <sergey-import src="template">
 
-    <sergey-import src="ad-zone-728-90" />
+    <sergey-template name="source">
+        <sergey-import src="ad-zone-728-90" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-ad-zone-728-90</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
   
 </sergey-import>
