--- a/article-topper-feature-black.html
+++ b/article-topper-feature-black.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="article-topper-feature-black" />
-  <sergey-template name="selector">.block-article-topper-feature-black</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="article-topper-feature-black" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-article-topper-feature-black</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
