--- a/attribution-date.html
+++ b/attribution-date.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="attribution-date" />
+    <sergey-template name="source">
+        <sergey-import src="attribution-date" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-attribution-date</sergey-template>
-  
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
