--- a/author-block.html
+++ b/author-block.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="author-block" />
-  <sergey-template name="selector">.author-block</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="author-block" />
+    </sergey-template>
+
+    <sergey-template name="selector">.author-block</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
