--- a/collage-2-up-vertical.html
+++ b/collage-2-up-vertical.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="collage-2-up-vertical" />
-  <sergey-template name="selector">.block-collage</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="collage-2-up-vertical" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-collage</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
