--- a/divider-color.html
+++ b/divider-color.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="divider-color" />
+    <sergey-template name="source">
+        <sergey-import src="divider-color" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-divider-color</sergey-template>
-  
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
