--- a/divider.html
+++ b/divider.html
@@ -1,6 +1,12 @@
 <sergey-import src="template">
 
-    <sergey-import src="divider" />
+    <div class="docs">A simple divider</div>
+
+
+    <sergey-template name="source">
+        <sergey-import src="divider" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-divider</sergey-template>
   
 </sergey-import>
