--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
                 <li class="mb-1"><a href="article-topper-wide-left.html">↳ Wide Art, Left</a></li>
                 <li class="mb-1"><a href="article-topper-full.html">↳ Full Art</a></li>
                 <li class="mb-1"><a href="article-topper-full-left.html">↳ Full Art, Left</a></li>
-                <li class="mb-1"><a href="article-topper-none.html">↳ No Art</a></li>
-                <li class="mb-1"><a href="article-topper-none-left.html">↳ No Art, Left</a></li>
+                <li class="mb-1"><a href="article-topper-no-lead-art.html">↳ No Art</a></li>
+                <li class="mb-1"><a href="article-topper-no-lead-art-left.html">↳ No Art, Left</a></li>
                 <li class="mb-1"><a href="article-topper-feature.html">↳ Feature</a></li>
                 <li class="mb-1"><a href="article-topper-feature-black.html">↳ Feature, Black</a></li>
-                <li class="mb-1"><a href="article-topper-no-lead-art.html">↳ No Lead Art</a></li>
               </ul>
             </li>
 
@@ -203,10 +202,14 @@
             </ul>
           </li>
 
-          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
-            <a class="block mb-2 font-bold" href="video.html">Video</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+            <div class="flex justify-between cursor-pointer toggleMenu">
+              <a class="block mb-2 font-bold">Video</a>
+              <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            </div>
             <ul class="submenu hidden">
+              <li class="mb-1"><a href="video.html">↳ Default</a></li>
+              <li class="mb-1"><a href="video-vertical.html">↳ Vertical</a></li>
             </ul>
           </li>
 
