--- a/paywall-inline.html
+++ b/paywall-inline.html
@@ -1,11 +1,11 @@
 <sergey-import src="template">
 
-  <div class="mt-32">
-    <!-- this container is for display in the guide. remove it later -->
+    <sergey-template name="source">
+        <sergey-import src="paywall-inline" />
+    </sergey-template>
 
-  <sergey-import src="paywall-inline" />
-  <sergey-template name="selector">.block-paywall-inline</sergey-template>
+    <sergey-template name="selector">.block-paywall-inline</sergey-template>
 
-  </div>
-  
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
