--- a/pullquote-culture-color-strip.html
+++ b/pullquote-culture-color-strip.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="pullquote-culture-color-strip" />
-    <sergey-template name="selector">blockquote.culture-color-strip</sergey-template>
+    <sergey-template name="source">
+        <sergey-import src="pullquote-culture-color-strip" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-pullquote-culture-color-strip</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
