--- a/pullquote-culture.html
+++ b/pullquote-culture.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="pullquote-culture" />
+    <sergey-template name="source">
+        <sergey-import src="pullquote-culture" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-pullquote-culture</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
