--- a/video-vertical.html
+++ b/video-vertical.html
@@ -1,11 +1,12 @@
 <sergey-import src="template">
 
     <sergey-template name="source">
-        <sergey-import src="media-item-wide" />
+        <sergey-import src="video-vertical" />
     </sergey-template>
 
-    <sergey-template name="selector">.block-media-item-wide</sergey-template>
+    <sergey-template name="selector">.block-video-vertical</sergey-template>
 
     <div class="docs empty:hidden"></div>
 
+  
 </sergey-import>
