--- a/_imports/article-topper-full-left.html
+++ b/_imports/article-topper-full-left.html
@@ -8,6 +8,6 @@
 
 <sergey-import src="lead-art-full" />
 
-<sergey-import src="article-lead" />
+<sergey-import src="article-subheadline" />
 
 </div>
