--- a/_imports/article-topper-no-lead-art-left.html
+++ b/_imports/article-topper-no-lead-art-left.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper md:text-center">
+<div class="block-article-topper">
 
 <sergey-import src="article-topper-context-live" />
 
@@ -6,6 +6,6 @@
 
 <sergey-import src="attribution-date" />
 
-<sergey-import src="article-lead" />
+<sergey-import src="article-subheadline" />
 
 </div>
