--- a/article-body.html
+++ b/article-body.html
@@ -1,7 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="article-body" />
-    <sergey-template name="selector">.article-body</sergey-template>
-    
+    <sergey-template name="source">
+        <sergey-import src="article-body" />
+    </sergey-template>
 
+    <sergey-template name="selector"></sergey-template>
+
+    <div class="docs empty:hidden"></div>
+  
 </sergey-import>
