--- a/article-topper-no-lead-art.html
+++ b/article-topper-no-lead-art.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="article-topper-no-lead-art" />
-  <sergey-template name="selector">.block-article-topper-no-lead-art</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="article-topper-no-lead-art" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-article-topper-no-lead-art</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
