--- a/blockquote-long.html
+++ b/blockquote-long.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="blockquote-long" />
-    <sergey-template name="selector">.block-blockqoute-long</sergey-template>
+    <sergey-template name="source">
+        <sergey-import src="blockquote-long" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-blockquote-long</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
