--- a/blockquote.html
+++ b/blockquote.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="blockquote" />
+    <sergey-template name="source">
+        <sergey-import src="blockquote" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-blockquote</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
