--- a/card-list.html
+++ b/card-list.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="card-list" />
-  <sergey-template name="selector">.block-card-list</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="card-list" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-card-list</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
