--- a/collage-3-up-square.html
+++ b/collage-3-up-square.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="collage-3-up-square" />
-  <sergey-template name="selector">.block-collage</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="collage-3-square" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-collage</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
