--- a/layout-article.html
+++ b/layout-article.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="layout-article" />
-  <sergey-template name="selector"></sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="layout-article" />
+    </sergey-template>
+
+    <sergey-template name="selector"></sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
