--- a/link-box.html
+++ b/link-box.html
@@ -1,10 +1,11 @@
 <sergey-import src="template">
 
-  <div class="px-4">
+    <sergey-template name="source">
+        <sergey-import src="link-box" />
+    </sergey-template>
 
-    <sergey-import src="link-box" />
     <sergey-template name="selector">.block-link-box</sergey-template>
 
-  </div>
-  
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
