--- a/media-item.html
+++ b/media-item.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="media-item" />
-  <sergey-template name="selector">.block-media-item</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="media-item" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-media-item</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
