--- a/offer-light.html
+++ b/offer-light.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="offer-light" />
-  <sergey-template name="selector">.block-offer-light</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="offer-light" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-offer-light</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
