--- a/offer.html
+++ b/offer.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-  <sergey-import src="offer" />
-  <sergey-template name="selector">.block-offer</sergey-template>
-  
+    <sergey-template name="source">
+        <sergey-import src="offer" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-offer</sergey-template>
+
+    <div class="docs empty:hidden"></div>
+
 </sergey-import>
