--- a/philanthropy-inline-callout.html
+++ b/philanthropy-inline-callout.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="philanthropy-inline-callout" />
+    <sergey-template name="source">
+        <sergey-import src="philanthropy-inline-callout" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-philanthropy-inline-callout</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
