--- a/pullquote-sports-black.html
+++ b/pullquote-sports-black.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="pullquote-sports-black" />
-    <sergey-template name="selector">blockquote.sports-black</sergey-template>
+    <sergey-template name="source">
+        <sergey-import src="pullquote-sports-black" />
+    </sergey-template>
+
+    <sergey-template name="selector">.block-pullquote-sports-black</sergey-template>
+
+    <div class="docs empty:hidden"></div>
 
 </sergey-import>
