--- a/video.html
+++ b/video.html
@@ -1,6 +1,11 @@
 <sergey-import src="template">
 
-    <sergey-import src="video" />
+    <sergey-template name="source">
+        <sergey-import src="video" />
+    </sergey-template>
+
     <sergey-template name="selector">.block-video</sergey-template>
 
+    <div class="docs empty:hidden"></div>
+  
 </sergey-import>
