Author Block, Social Icons, Text Select

--- a/divider.html
+++ b/divider.html
@@ -1,12 +1,11 @@
 <sergey-import src="template">
 
-    <div class="docs">A simple divider</div>
-
-
     <sergey-template name="source">
         <sergey-import src="divider" />
     </sergey-template>
 
     <sergey-template name="selector">.block-divider</sergey-template>
+
+    <div class="docs empty:hidden">A simple divider</div>
   
 </sergey-import>
