--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -1,11 +1,10 @@
-<div class="block-author bg-yellow gap-8 py-6 px-4">
-  <time class="font-condensed block font-light mb-4">Published 3/16/22 10:20 p.m. EST </time>
+<div class="block-author bg-orange-100 gap-8 py-6 pt-10 px-4">
 
-  <div class="person flex items-center justify-between border-t mb-4">
+  <div class="person flex relative items-center justify-between border-t-4 border-black mb-4">
 
-    <div class="content">
+    <div class="content max-w-[calc(100%-6rem)]">
     <p class="name font-condensed font-black text-lg leading-tight">Kyle Goon</p>
-    <p class="leading-tight font-light text-sm text-gray"><a href="#">kyle.goon@thebaltimorebanner.org</a></p>
+    <p class="leading-tight font-light text-sm text-gray truncate"><a href="#">kyle.goon.with.a.suuuuper.longer.than.normal.email.address.that.runs.off@thebaltimorebanner.org</a></p>
     </div>
 
     <div class="w-16 h-16 bg-orange">
@@ -18,13 +17,25 @@
     <p class="leading-snug font-light">Kyle Goon joined the staff of The Baltimore Banner in April 2023 as a sports columnist. He previously covered the Los Angeles Lakers for the Orange County Register, including... <a href="#">More</a></p>
   </div>
 
-  <div class="links flex gap-4 mb-6">
-    <a href="#" class="w-6 h-6 block bg-neon-yellow"></a>
-    <a href="#" class="w-6 h-6 block bg-neon-yellow"></a>
-    <a href="#" class="w-6 h-6 block bg-neon-yellow"></a>
+  <div class="links flex gap-2 mb-6">
+    <a href="#" class="w-6 h-6 block">
+      <img class="w-6 h-6" src="assets/images/icon-linkedin.svg" alt="">
+    </a>
+    <a href="#" class="w-6 h-6 block">
+      <img class="w-6 h-6" src="assets/images/icon-x.svg" alt="">
+    </a>
+    <a href="#" class="w-6 h-6 block">
+      <img class="w-6 h-6" src="assets/images/icon-mastadon.svg" alt="">
+    </a>
+    <a href="#" class="w-6 h-6 block">
+      <img class="w-6 h-6" src="assets/images/icon-facebook.svg" alt="">
+    </a>
+    <a href="#" class="w-6 h-6 block">
+      <img class="w-6 h-6" src="assets/images/icon-instagram.svg" alt="">
+    </a>
   </div>
 
-  <div class="more border-t pt-6">
+  <div class="more border-t border-tinted-gray-300 pt-6">
 
     <h3 class="uppercase font-condensed mb-4">More from Kyle Goon</h3>
 
