--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -4,6 +4,8 @@
 
 <sergey-import src="blockquote" />
 
+<sergey-import src="photo-gallery" />
+
 <p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
 
 <sergey-import src="media-item-wide" />
