--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
             </ul>
           </li>
 
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="photo-gallery.html">Photo Gallery</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            <ul class="submenu hidden">
+            </ul>
+          </li>
+
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
             <div class="flex justify-between cursor-pointer toggleMenu">
               <a class="block mb-2 font-bold">Pullquote</a>
